--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,8 +9,8 @@ updates:
 
   - package-ecosystem: "nuget"
     # location of package manifests
-    directory: "src/"
-    open-pull-requests-limit: 100
+    directory: "/"
+    open-pull-requests-limit: 10
     schedule:
       interval: "daily"
 
