--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -21,8 +21,11 @@ jobs:
         # with:
         #   queries: security-and-quality
 
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v1
+      - name: Build project
+        id: build_project
+        shell: pwsh
+        run: |
+          dotnet build -c Release
 
       - name: Perform CodeQL Analysis
         id: analyze_codeql
