--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -25,7 +25,7 @@ jobs:
         id: build_project
         shell: pwsh
         run: |
-          dotnet build -c Release
+          dotnet build Swashbuckle.AspNetCore.sln -c Release
 
       - name: Perform CodeQL Analysis
         id: analyze_codeql
