test dotnet build

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -33,7 +33,7 @@ jobs:
           npm install
           Pop-Location
 
-          dotnet build Swashbuckle.AspNetCore.sln -c Release
+          dotnet build -c Release
 
       - name: Perform CodeQL Analysis
         id: analyze_codeql
