--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -33,7 +33,9 @@ jobs:
           npm install
           Pop-Location
 
-          dotnet build -c Release
+          Get-ChildItem
+
+          # dotnet build -c Release
 
       - name: Perform CodeQL Analysis
         id: analyze_codeql
