--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   analyze:
     name: CodeQL Analysis
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Checkout repository
         id: checkout_repo
@@ -33,9 +33,7 @@ jobs:
           npm install
           Pop-Location
 
-          Get-ChildItem
-
-          # dotnet build -c Release
+          dotnet build -c Release
 
       - name: Perform CodeQL Analysis
         id: analyze_codeql
