--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -33,6 +33,8 @@ jobs:
           npm install
           Pop-Location
 
+          nuget restore .\Swashbuckle.AspNetCore.sln
+
           dotnet build -c Release
 
       - name: Perform CodeQL Analysis
